# i18n

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
i18n/: __init__.py
